--- a/App.css
+++ b/App.css
@@ -4,6 +4,11 @@
   justify-content:center;
   flex-direction: column;
 }
+.flexMain {
+  display: flex;
+  justify-content:center;
+  flex-direction: row;
+}
 .flexCenterR {
   display: flex;
   align-items: center;
@@ -14,13 +19,13 @@
   text-align: left;
   padding: 2vh;
   padding-left: 6vh;
-  padding-top: 3vh;
+  padding-top: 6vh;
 }
 .rightColumn{
   text-align: left;
   padding: 2vh;
   padding-right: 6vh;
-  padding-top: 3vh;
+  padding-top: 6vh;
 }
 .classGrid3 {
   display: grid;
@@ -29,6 +34,23 @@
   height: 100vh;
 }
 .barGrid3{
+  grid-column-start: 1;
+  grid-column-end: 4;
+  height: auto;
+}
+.homeGrid3{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: auto;
+  height: auto;
+}
+.mainGrid3 {
+  display: grid;
+  grid-template-columns: 1fr 4fr 1fr;
+  grid-auto-rows: 0.6fr 6fr;
+  height: 100vh;
+}
+.topGrid3{
   grid-column-start: 1;
   grid-column-end: 4;
   height: auto;
@@ -42,6 +64,18 @@
 .avatarIcon{
   height: 6vh;
   border-radius: 100%;
+}
+.projectImage{
+  width: 100%;
+  max-height: 16.5vh;
+  margin-left: auto;
+  margin-right: auto;
+  object-fit: cover;
+  border-radius: 1em 1em 0em 0em;
+}
+.boxShadow{
+  box-shadow: 2px 2px 10px #888888;
+  height: 15em;
 }
 @media screen and (max-width: 750px){
   .classGrid3 {
@@ -67,5 +101,16 @@
   .leftColumn{
     text-align: left;
     padding: 2vh;
+  }
+  .mainGrid3 {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 1fr;
+    height: 100vh;
+  }
+  .topGrid3{
+    grid-column-start: 1;
+    grid-column-end: 1;
+    height: auto;
   }
 }
