--- a/reduca-web/src/App.css
+++ b/reduca-web/src/App.css
@@ -29,7 +29,7 @@
 }
 .classGrid3 {
   display: grid;
-  grid-template-columns: 1.5fr 6fr 1.5fr;
+  grid-template-columns: 1.5fr 5fr 1.5fr;
   grid-auto-rows: 6fr 1fr;
   height: 100vh;
 }
@@ -74,8 +74,7 @@
   border-radius: 1em 1em 0em 0em;
 }
 .boxShadow {
-  box-shadow: 2px 2px 10px #888888;
-  height: 15em;
+  box-shadow: 2px 2px 10px #DDDDDD;
 }
 .inputLog {
   width: 30vh;
@@ -111,21 +110,21 @@
   flex-direction: column;
   overflow: auto;
   height: 100%;
-  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+  box-shadow: 2px 2px 10px #DDDDDD;
   border-radius: 1rem 1rem 0 0;
-  background-color: #d8d8d8;
+  background-color: rgb(239,239,239);
 }
 
 .boton {
-  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
-  background-color: #d8d8d8;
+  box-shadow: 2px 2px 10px #DDDDDD;
+  background-color: rgb(239,239,239);
 }
 
 .video {
   margin-bottom: 1rem;
   border-radius: 1rem;
-  background-color: #d8d8d8;
-  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+  background-color: rgb(239,239,239);
+  box-shadow: 2px 2px 10px #DDDDDD;
 }
 
 body,html {
@@ -134,8 +133,9 @@ body,html {
 }
 
 .boton {
-  background-color: rgba(192,192,192,0.8);
-  padding: 1rem; 
+  box-shadow: 2px 2px 10px #DDDDDD;
+  background-color: rgb(239,239,239);
+  padding: 0.6rem; 
   margin-right: 0.5rem;
   border-radius: 1rem;
   text-align: center;
